--- a/public/custom-select-bootstrap-4.html
+++ b/public/custom-select-bootstrap-4.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="form-group custom-select-group">
       <div class="custom-select-wrapper">
-        <label for="customSelect-1">Example select</label>
+        <label for="customSelect-1">Seleziona un'opzione</label>
         <select class="form-control js-custom-select" id="customSelect-1">
           <option>1</option>
           <option>2</option>
@@ -27,10 +27,12 @@
         </select>
       </div>
     </div>
+
+    
     <div class="form-group custom-select-group">
       <div class="custom-select-wrapper">
-        <label for="customSelect-1">Example select</label>
-        <select class="form-control js-custom-select" id="customSelect-1">
+        <label for="customSelect-2">Seleziona un'opzione</label>
+        <select class="form-control js-custom-select" id="customSelect-2">
           <option>6</option>
           <option>7</option>
           <option>8</option>
