update css for arrow and style

--- a/public/custom-select-bootstrap-4.html
+++ b/public/custom-select-bootstrap-4.html
@@ -38,6 +38,16 @@
           <option>Opzione 8</option>
           <option>Opzione 9</option>
           <option>Opzione 10</option>
+          <option>Opzione 11</option>
+          <option>Opzione 12</option>
+          <option>Opzione 13</option>
+          <option>Opzione 14</option>
+          <option>Opzione 15</option>
+          <option>Opzione 16</option>
+          <option>Opzione 17</option>
+          <option>Opzione 18</option>
+          <option>Opzione 19</option>
+          <option>Opzione 20</option>
         </select>
       </div>
     </div>
