--- a/public/custom-select-bootstrap-4.html
+++ b/public/custom-select-bootstrap-4.html
@@ -18,7 +18,7 @@
     
     <div class="form-group custom-select-group">
       <div class="custom-select-wrapper">
-        <label for="customSelect-1" class="custom-select-label">Seleziona un'opzione 1</label>
+        <label for="customSelect-1" class="custom-select-label">Custom select</label>
         <select class="form-control js-custom-select" id="customSelect-1">
           <option>Opzione 1</option>
           <option>Opzione 2</option>
@@ -31,7 +31,7 @@
     
     <div class="form-group custom-select-group">
       <div class="custom-select-wrapper">
-        <label for="customSelect-2" class="custom-select-label">Seleziona un'opzione 2</label>
+        <label for="customSelect-2" class="custom-select-label">Custom select molte options</label>
         <select class="form-control js-custom-select" id="customSelect-2">
           <option>Opzione 6</option>
           <option>Opzione 7</option>
@@ -48,6 +48,19 @@
           <option>Opzione 18</option>
           <option>Opzione 19</option>
           <option>Opzione 20</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group custom-select-group custom-multiselect">
+      <div class="custom-select-wrapper">
+        <label for="customSelect-3" class="custom-select-label">Seleziona una o più opzioni</label>
+        <select class="form-control js-custom-select" id="customSelect-3" multiple>
+          <option>Opzione 1</option>
+          <option>Opzione 2</option>
+          <option>Opzione 3</option>
+          <option>Opzione 4</option>
+          <option>Opzione 5</option>
         </select>
       </div>
     </div>
