--- a/public/custom-select.html
+++ b/public/custom-select.html
@@ -16,7 +16,7 @@
     
     <div class="custom-select-group">
       <div class="custom-select-wrapper">
-        <label for="customSelect-1" class="custom-select-label">Seleziona un'opzione 1</label>
+        <label for="customSelect-1" class="custom-select-label">Custom select</label>
         <select class="js-custom-select" id="customSelect-1">
           <option>Opzione 1</option>
           <option>Opzione 2</option>
@@ -29,7 +29,7 @@
     
     <div class="custom-select-group">
       <div class="custom-select-wrapper">
-        <label for="customSelect-2" class="custom-select-label">Seleziona un'opzione 2</label>
+        <label for="customSelect-2" class="custom-select-label">Custom select molte options</label>
         <select class="js-custom-select" id="customSelect-2">
           <option>Opzione 6</option>
           <option>Opzione 7</option>
@@ -46,6 +46,19 @@
           <option>Opzione 18</option>
           <option>Opzione 19</option>
           <option>Opzione 20</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="custom-select-group custom-multiselect">
+      <div class="custom-select-wrapper">
+        <label for="customSelect-3" class="custom-select-label">Seleziona una o più opzioni</label>
+        <select class="js-custom-select" id="customSelect-3" multiple>
+          <option>Opzione 1</option>
+          <option>Opzione 2</option>
+          <option>Opzione 3</option>
+          <option>Opzione 4</option>
+          <option>Opzione 5</option>
         </select>
       </div>
     </div>
