--- a/public/custom-select.html
+++ b/public/custom-select.html
@@ -62,6 +62,19 @@
         </select>
       </div>
     </div>
+
+    <div class="custom-select-group custom-multiselect livesearch">
+      <div class="custom-select-wrapper">
+        <label for="customSelect-4" class="custom-select-label">Seleziona una o più opzioni con livesearch</label>
+        <select class="js-custom-select" id="customSelect-4" multiple>
+          <option>Apzione 1</option>
+          <option>Opzione 2</option>
+          <option>Opzione 3</option>
+          <option>Opzione 4</option>
+          <option>Opzione 5</option>
+        </select>
+      </div>
+    </div>
     
   <script src="js/custom-select.js"></script>
 </body>
