--- a/public/custom-select-bootstrap-4.html
+++ b/public/custom-select-bootstrap-4.html
@@ -83,7 +83,7 @@
           <option>Opzione 17</option>
           <option>Opzione 18</option>
           <option>Opzione 19</option>
-          <option>Opzione 20</option>
+          <option>Test</option>
         </select>
       </div>
     </div>
