uptate live search example and template

--- a/public/custom-select-bootstrap-4.html
+++ b/public/custom-select-bootstrap-4.html
@@ -16,6 +16,7 @@
 <body>
   <div class="container">
 
+    <h2>Custom select</h2>
     <div class="form-group custom-select-group">
       <div class="custom-select-wrapper">
         <label for="customSelect-1" class="custom-select-label">Custom select</label>
@@ -52,9 +53,10 @@
       </div>
     </div>
 
+    <h2>Multi select</h2>
     <div class="form-group custom-select-group custom-multiselect">
       <div class="custom-select-wrapper">
-        <label for="customSelect-3" class="custom-select-label">Seleziona una o più opzioni</label>
+        <label for="customSelect-3" class="custom-select-label">Multi select - Seleziona una o più options</label>
         <select class="form-control js-custom-select" id="customSelect-3" multiple>
           <option>Opzione 1</option>
           <option>Opzione 2</option>
@@ -65,25 +67,49 @@
       </div>
     </div>
 
+    <h2>Live search</h2>
     <div class="form-group custom-select-group custom-multiselect livesearch">
       <div class="custom-select-wrapper">
-        <label for="customSelect-4" class="custom-select-label">Seleziona una o più opzioni con livesearch</label>
+        <label for="customSelect-4" class="custom-select-label">Multi select - Seleziona una o più options con livesearch</label>
         <select class="js-custom-select" id="customSelect-4" multiple>
-          <option>Lorem Ipsum</option>
-          <option>Opzione 7</option>
-          <option>Opzione 8</option>
-          <option>Opzione 9</option>
-          <option>Opzione 10</option>
-          <option>Opzione 11</option>
-          <option>Opzione 12</option>
-          <option>Opzione 13</option>
-          <option>Opzione 14</option>
-          <option>Opzione 15</option>
-          <option>Opzione 16</option>
-          <option>Opzione 17</option>
-          <option>Opzione 18</option>
-          <option>Opzione 19</option>
-          <option>Test</option>
+          <option>Lorem</option>
+          <option>Consequatur</option>
+          <option>Accusantium</option>
+          <option>Odit</option>
+          <option>Euismod</option>
+          <option>Pellentesque</option>
+          <option>Ullamco</option>
+          <option>Error</option>
+          <option>Voluptates</option>
+          <option>Ipsam</option>
+          <option>Illo</option>
+          <option>Consequatur</option>
+          <option>Exercitationem</option>
+          <option>Consectetuer</option>
+          <option>Vestibulum</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group custom-select-group livesearch">
+      <div class="custom-select-wrapper">
+        <label for="customSelect-5" class="custom-select-label">Custom select molte options con livesearch</label>
+        <select class="js-custom-select" id="customSelect-5">
+          <option>Lorem</option>
+          <option>Consequatur</option>
+          <option>Accusantium</option>
+          <option>Odit</option>
+          <option>Euismod</option>
+          <option>Pellentesque</option>
+          <option>Ullamco</option>
+          <option>Error</option>
+          <option>Voluptates</option>
+          <option>Ipsam</option>
+          <option>Illo</option>
+          <option>Consequatur</option>
+          <option>Exercitationem</option>
+          <option>Consectetuer</option>
+          <option>Vestibulum</option>
         </select>
       </div>
     </div>
