--- a/public/custom-select-bootstrap-5.html
+++ b/public/custom-select-bootstrap-5.html
@@ -16,6 +16,7 @@
 <body>
   <div class="container">
     
+    <h2>Custom select</h2>
     <div class="mb-3 custom-select-group">
       <div class="custom-select-wrapper">
         <label for="customSelect-1" class="custom-select-label">Custom select</label>
@@ -52,15 +53,63 @@
       </div>
     </div>
 
+    <h2>Multi select</h2>
     <div class="mb-3 custom-select-group custom-multiselect">
       <div class="custom-select-wrapper">
-        <label for="customSelect-3" class="custom-select-label">Seleziona una o più opzioni</label>
+        <label for="customSelect-3" class="custom-select-label">Seleziona una o più options</label>
         <select class="form-select js-custom-select" id="customSelect-3" multiple>
           <option>Opzione 1</option>
           <option>Opzione 2</option>
           <option>Opzione 3</option>
           <option>Opzione 4</option>
           <option>Opzione 5</option>
+        </select>
+      </div>
+    </div>
+
+    <h2>Live search</h2>
+    <div class="mb-3 custom-select-group custom-multiselect livesearch">
+      <div class="custom-select-wrapper">
+        <label for="customSelect-4" class="custom-select-label">Multi select - Seleziona una o più options con livesearch</label>
+        <select class="form-select js-custom-select" id="customSelect-4" multiple>
+          <option>Lorem</option>
+          <option>Consequatur</option>
+          <option>Accusantium</option>
+          <option>Odit</option>
+          <option>Euismod</option>
+          <option>Pellentesque</option>
+          <option>Ullamco</option>
+          <option>Error</option>
+          <option>Voluptates</option>
+          <option>Ipsam</option>
+          <option>Illo</option>
+          <option>Consequatur</option>
+          <option>Exercitationem</option>
+          <option>Consectetuer</option>
+          <option>Vestibulum</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="mb-3 custom-select-group livesearch">
+      <div class="custom-select-wrapper">
+        <label for="customSelect-5" class="custom-select-label">Custom select molte options con livesearch</label>
+        <select class="form-select js-custom-select" id="customSelect-5">
+          <option>Lorem</option>
+          <option>Consequatur</option>
+          <option>Accusantium</option>
+          <option>Odit</option>
+          <option>Euismod</option>
+          <option>Pellentesque</option>
+          <option>Ullamco</option>
+          <option>Error</option>
+          <option>Voluptates</option>
+          <option>Ipsam</option>
+          <option>Illo</option>
+          <option>Consequatur</option>
+          <option>Exercitationem</option>
+          <option>Consectetuer</option>
+          <option>Vestibulum</option>
         </select>
       </div>
     </div>
